# kstd-resource

./: CMakeLists.txt  README.md
.github/workflows/: develop.yml  master.yml
include/kstd/resource/: resource.hpp
src/: main.cpp  resource.cpp
test/: test_resource.cpp
